# sam3-tissue-segmentation

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  viewer.py
src/: sam3_segment.py  wsi_thumb.py
src/viewer/: __init__.py  cli.py  server.py
static/: index.html
