[project]
name = "ai-assisted-wsi-labeling"
version = "0.1.0"
description = "Web-based whole slide image viewer with AI-assisted labeling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pillow>=11.0.0",
    "numpy>=2.0.0",
    "fastslide>=0.5.4",
]

[project.scripts]
wsi-view = "viewer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/viewer"]
